nodejs-gpu.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nodejs-gpu
spec:
  nodeSelector:
    gpu: "true"
  containers:
  - image: marcossb/nodejs-test
    name: nodejs-gpu
