nodejs-liveness-probe.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nodejs-test-liveness
spec:
  containers:
  - image: marcossb/nodejs-test-liveness
    name: nodejs-test-liveness
    livenessProbe:
      httpGet:
        path: /
        port: 8080
