nodejs-manual-labels.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nodejs-manual-v2
  labels:
    creation_method: manual
    env: prod
spec:
  containers:
  - image: marcossb/nodejs-test
    name: nodejs-test
    ports:
    - containerPort: 8080
      protocol: TCP
