nodejs-manual.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nodejs-manual
  namespace: custom-namespace
spec:
  containers:
  - image: marcossb/nodejs-test
    name: nodejs-test
    ports:
    - containerPort: 8080
      protocol:	TCP
