external-svc.yaml
apiVersion: v1
kind: Service
metada:
  name: external-svc
spec:
  ports:
  - port: 80
