nodejs-svc-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-lb
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: nodejs
