nodejs-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-test
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: nodejs-test
